[package]
name = "furaffinity-rs"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
scraper = "0.12"
regex = "1"
reqwest = "0.11"
image = "0.23"
chrono = "0.4"
img_hash = "3"
sha2 = "0.9"

cfscrape = { git = "https://github.com/Syfaro/cfscrape-rs", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
cloudflare-bypass = ["cfscrape", "tokio"]
